# bitarena

./: BENCHMARKS.md  Cargo.toml  DESIGN.md  MIGRATION.md  Makefile  README.md
.github/workflows/: ci.yml
benches/: arena_benchmarks.rs  comparative.rs  realistic_sizes.rs
src/: arena.rs  bitset.rs  free_list.rs  index.rs  iter.rs  lib.rs  serde_impl.rs
tests/: oracle_tests.rs
